--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   logging: ^1.2.0
   intl: ^0.18.1
   auto_route: ^7.8.3
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
