--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   intl: ^0.18.1
   auto_route: ^7.8.3
   flutter_animate: ^4.2.0+1
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
